// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AlertIcon /> renders a success correctly 1`] = `
<ActionCheckCircle
  style={
    Object {
      "fill": "#3D8B3D",
      "marginRight": "0.5em",
    }
  }
/>
`;

exports[`<AlertIcon /> renders a warning correctly 1`] = `
<AlertWarning
  style={
    Object {
      "fill": "#A07415",
      "marginRight": "0.5em",
    }
  }
/>
`;

exports[`<AlertIcon /> renders an error correctly 1`] = `
<AlertError
  style={
    Object {
      "fill": "#9F2723",
      "marginRight": "0.5em",
    }
  }
/>
`;

exports[`<AlertIcon /> renders info correctly 1`] = `
<ActionInfo
  style={
    Object {
      "fill": "#2C3E50",
      "marginRight": "0.5em",
    }
  }
/>
`;
